add giraffe content

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <img src="https://pbs.twimg.com/media/ExGyOwpU8AABKBd.jpg" alt="cat08">
         <img src="https://images.unsplash.com/photo-1575699914911-0027c7b95fb6?auto=format&fit=crop&q=80&w=3271&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="cat09">
         <img src="https://images.unsplash.com/photo-1613514101068-57e1491adb2d?auto=format&fit=crop&q=80&w=3270&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="cat10">
+        <img src="https://images.unsplash.com/photo-1589306661079-8b34ef390d3e?auto=format&fit=crop&q=80&w=3270&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="cat11">
     </div>
 </body>
 </html>
